[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
lazy_static = "1.5.0"
libc = "0.2.174"
libloading = "0.8.8"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json = "1.0.142"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
url = "2.5.7"
anyhow = "1.0.99"
